BugFix overflow:scroll figure.inline

--- a/_sass/minimal-mistakes/_syntax.scss
+++ b/_sass/minimal-mistakes/_syntax.scss
@@ -12,6 +12,7 @@ figure.highlight {
   font-size: $type-size-6;
   line-height: 1.8;
   border-radius: $border-radius;
+  overflow: scroll;
 
   > pre,
   pre.highlight {
